<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewOrders"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin"
    android:layout_marginLeft="@dimen/lateral_margin"
    android:layout_marginRight="@dimen/lateral_margin"
    android:layout_marginTop="@dimen/margin"
    app:cardCornerRadius="@dimen/corner_radius_card"
    app:cardElevation="@dimen/card_elevation"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtNameOrder"
                style="@style/recyclerRowName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:padding="3dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totale"
                    android:id="@+id/textView"
                    style="@style/recyclerSubTitle"/>

                <TextView
                    android:id="@+id/txtTotOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/recyclerSubTitle"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:id="@+id/textView4"
                    style="@style/recyclerSubTitle"/>

                <TextView
                    android:id="@+id/txtStateOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/recyclerSubTitle"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item"
                    android:id="@+id/txtStringItems"
                    android:gravity="right"
                    style="@style/recyclerSubTitle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtItems"
                    style="@style/recyclerSubTitle"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>